--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-        <a class="nav-link" href="https://github.com/thekaysev/dev09" target="_blank">Repo</a>
+        <a class="nav-link" href="https://slavk1ng.github.io/Dev-09/" target="_blank">Repo</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://validator.w3.org/nu/?doc=http%3A%2F%2Fthekaysev.github.io%2Fdev09" target="_blank">Nu Checker</a>
