--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <!-- partial:index.partial.html -->
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="#">Kaylin Sevigne - Dev 09</a>
+    <a class="navbar-brand" href="#">Curtis Holt Dev09</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
