--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a class="nav-link" href="https://slavk1ng.github.io/Dev-09/" target="_blank">Repo</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" https://validator.w3.org/nu/?doc=https%3A%2F%2Fslavk1ng.github.io%2FDev-09%2F" target="_blank">Nu Checker</a>
+        <a class="nav-link" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fslavk1ng.github.io%2FDev-09%2F" target="_blank">Nu Checker</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://wave.webaim.org/report#/https://thekaysev.github.io/dev09/" target="_blank">WAVE Check</a>
