--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a class="nav-link" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fslavk1ng.github.io%2FDev-09%2F" target="_blank">Nu Checker</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://wave.webaim.org/report#/https://thekaysev.github.io/dev09/" target="_blank">WAVE Check</a>
+        <a class="nav-link" href="https://wave.webaim.org/report#/https://slavk1ng.github.io/Dev-09/" target="_blank">WAVE Check</a>
       </li>
     </ul>
   </div>
@@ -34,7 +34,7 @@
  
     <div class="jumbotron">
       <div class="container">
-        <h1 class="display-3">WebDev - Quarantine Edition</h1>
+        <h1 class="display-3"></h1>
         <p></p>
       </div>
     </div>
@@ -42,13 +42,13 @@
   <div class="container">
 <div class="row">
   <div class="column">
-    <h2>Enter your message here:</h2>
+    <h2>Input message here:</h2>
     <input id="textInput"/>
     <button id="sender" class="btn-primary">➤</button>
 	<button id="clear" class="btn-primary">Clear Text</button>
   </div>
   <div class="column">
-    <h2>This is what you said but pretty:</h2>
+    <h2>Here is your input but we chagned it.</h2>
     <span id="textOutput"></span>
   </div>
 </div>
@@ -57,7 +57,7 @@
   </main>
 
   <footer class="container">
-    <p>&copy; Kaylin Sevigne 2020</p>
+    <p>&copy; Curtis Holt 2020</p>
   </footer>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
