--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
  
     <div class="jumbotron">
       <div class="container">
-        <h1 class="display-3"></h1>
+        <h1 class="display-3">Dev Message Changer</h1>
         <p></p>
       </div>
     </div>
@@ -48,7 +48,7 @@
 	<button id="clear" class="btn-primary">Clear Text</button>
   </div>
   <div class="column">
-    <h2>Here is your input but we chagned it.</h2>
+    <h2>Here is your input but we changed it.</h2>
     <span id="textOutput"></span>
   </div>
 </div>
@@ -57,7 +57,7 @@
   </main>
 
   <footer class="container">
-    <p>&copy; Curtis Holt 2020</p>
+    <p>Curtis Holt 2020</p>
   </footer>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
