--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
   </nav>
 
  
+  <main role="main">
+
 
  
     <div class="jumbotron">
@@ -54,7 +56,7 @@
 </div>
     </div>
     
-  
+    </main>
 
   <footer class="container">
     <p>Curtis Holt 2020</p>
