--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     <h2>Input message here:</h2>
     <input id="textInput"/>
     <button id="sender" class="btn-primary">➤</button>
-	<button id="clear" class="btn-primary">Clear Text</button>
+	<button id="clear" class="btn-primary">Wipe Text</button>
   </div>
   <div class="column">
-    <h2>Here is your input but we changed it.</h2>
+    <h2>Now its an action movie title</h2>
     <span id="textOutput"></span>
   </div>
 </div>
