--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
    
 
   <footer class="container">
-    <p>Curtis Holt 2020</p>
+    <p>Curtis Holt's Page</p>
   </footer>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
