--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
  
     <div class="jumbotron">
       <div class="container">
-        <h1 class="display-3">Dev Message Changer</h1>
+        <h1 class="display-3">80's Action Movie Title Creator</h1>
         <p></p>
       </div>
     </div>
